--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.9'
 services:
   app:
     build: .
     env_file:
       - .env
     ports:
-      - "8000:8000"
+      - "${HOST}:${PORT}:8000"
